==> ruediheimlicher/Atmega8_WL/wl_module.c <==
#include "wl_module.h"
#include "nRF24L01.h"
#include <avr/io.h>
#include <avr/interrupt.h>
#include <util/delay.h>
#define TX_POWERUP wl_module_config_register(CONFIG, wl_module_CONFIG | ( (1<<PWR_UP) | (0<<PRIM_RX) ) )
#define RX_POWERUP wl_module_config_register(CONFIG, wl_module_CONFIG | ( (1<<PWR_UP) | (1<<PRIM_RX) ) )

void wl_module_init()
// Initializes pins and interrupt to communicate with the wl_module
// Should be called in the early initializing phase at startup.
{

   // Define CSN and CE as Output and set them to default
   SPI_WL_DDR     |= (1<<SPI_WL_CE);	//Ausgang fuer WL-CE
   SPI_WL_PORT    |= (1<<SPI_WL_CE);	//HI
   SPI_WL_DDR     |= (1<<SPI_WL_CSN);	//Ausgang fuer WL-CSN
   SPI_WL_PORT    |= (1<<SPI_WL_CSN);	//HI
   
 
   // Interrupt auf INT1
   INTERRUPT_DDR &= ~(1<<INT1_PIN);
   INTERRUPT_PORT |= (1<<INT1_PIN);
   
   
   
   
   wl_module_CE_lo;
   wl_module_CSN_hi;
   
#if defined(__AVR_ATmega8__)
   // Initialize external interrupt 0 (PD2)
   MCUCR = ((1<<ISC11));	// Set external interupt on falling edge
   GICR  = ((1<<INT1)|(0<<INT0));							// Activate INT1
#endif // __AVR_ATmega8__
   
#if defined(__AVR_ATmega88A__)
   EICRA = ((1<<ISC11)|(0<<ISC10)|(1<<ISC01)|(0<<ISC00));	// Set external interupt on falling edge for INT0 and INT1
   EIMSK  = ((0<<INT1)|(1<<INT0));							// Activate INT0
#endif // __AVR_ATmega88A__
   
#if defined(__AVR_ATmega168__)
   // Initialize external interrupt on port PD6 (PCINT22)
   DDRB &= ~(1<<PD6);
   PCMSK2 = (1<<PCINT22);
   PCICR  = (1<<PCIE2);
#endif // __AVR_ATmega168__
   
#if defined(__AVR_ATmega32U4__)
   // Initialize external interrupt on port PD0
   INTERRUPT_DDR &= ~(1<<INT0_PIN);
   INTERRUPT_PORT |= (1<<INT0_PIN);
   
   EICRA = ((1<<ISC11)|(0<<ISC10)|(1<<ISC01)|(0<<ISC00));
   // Set external interupt on falling edge for INT0 and INT1
   EIMSK  = ((0<<INT1)|(1<<INT0));
   
#endif // __AVR_ATmega32U4__
   
   
   
   // Initialize spi module
   wl_spi_init();
}

void wl_module_send(uint8_t * value, uint8_t len)
// Sends a data package to the default address. Be sure to send the correct
// amount of bytes as configured as payload on the receiver.
{
   //lcd_clr_line(3);
   //lcd_gotoxy(3,3);
   //lcd_putc('b');
   
   //lcd_puthex(PTX);
   //lcd_putc(' ');
   //return;
   while (PTX)
   {
      //lcd_putc('x');
   }
   
   // Wait until last paket is send
   //lcd_putc('A');
   wl_module_CE_lo;
   _delay_us(50);
   PTX = 1;                        // Set to transmitter mode
   TX_POWERUP;                     // Power up
   
   wl_module_CSN_lo;                    // Pull down chip select
   //lcd_putc('B');
   _delay_us(50);
   spi_fast_shift( FLUSH_TX );     // Write cmd to flush tx fifo
   //lcd_putc('C');
   wl_module_CSN_hi;                    // Pull up chip select
   //return;
   _delay_us(50);
   wl_module_CSN_lo;                    // Pull down chip select
   spi_fast_shift( W_TX_PAYLOAD ); // Write cmd to write payload
   spi_transmit_sync(value,len);   // Write payload
   wl_module_CSN_hi;                    // Pull up chip select
   
   wl_module_CE_hi;                     // Start transmission
   _delay_us(100);						// Gruenes Modul funktioniert nicht mit 10µs delay
   wl_module_CE_lo;
  // lcd_putc('D');
}
