==> MrChunckuee/MPLABX-XC8_Examples/XC8_18FXXKXX_nRF24L01/NRF_Slave.X/wl_module.c <==
#define _XTAL_FREQ 16000000
#include <xc.h>
#include "wl_module.h"
#include "nRF24L01.h"
#include "spi.h"
#define TX_POWERUP wl_module_config_register(CONFIG, wl_module_CONFIG | ( (1<<PWR_UP) | (0<<PRIM_RX) ) )
#define RX_POWERUP wl_module_config_register(CONFIG, wl_module_CONFIG | ( (1<<PWR_UP) | (1<<PRIM_RX) ) )

void wl_module_init(void)
// Initializes pins and interrupt to communicate with the wl_module
// Should be called in the early initializing phase at startup.
{
    // Define CSN and CE as Output and set them to default
    TRISBbits.TRISB4 = 0;
    TRISBbits.TRISB3 = 0;
    wl_module_CE_lo;
    wl_module_CSN_hi;

    // set up INT2
    ANSELBbits.ANSB2 = 0; // digital input buffer enabled
    TRISBbits.TRISB2 = 1; // RB2 as input
    INTCON2bits.INTEDG2 = 0; // trigger interrupt on falling edge
    INTCON3bits.INT2IE = 1; // enable INT2 interrupt

    // Initialize spi module
    spi_init();
}

void wl_module_send(unsigned char * value, unsigned char len)
// Sends a data package to the default address. Be sure to send the correct
// amount of bytes as configured as payload on the receiver.
{
    while (PTX) {}                  // Wait until last paket is send

    wl_module_CE_lo;

    PTX = 1;                        // Set to transmitter mode
    TX_POWERUP;                     // Power up

    wl_module_CSN_lo;                    // Pull down chip select
    spi_fast_shift( FLUSH_TX );     // Write cmd to flush tx fifo
    wl_module_CSN_hi;                    // Pull up chip select

    wl_module_CSN_lo;                    // Pull down chip select
    spi_fast_shift( W_TX_PAYLOAD ); // Write cmd to write payload
    spi_transmit_sync(value,len);   // Write payload
    wl_module_CSN_hi;                    // Pull up chip select

    wl_module_CE_hi;                     // Start transmission
    __delay_us(10);						// Grünes Modul funktioniert nicht mit 10µs delay
    wl_module_CE_lo;
}
